[workspace]
resolver = "2"
members = [
    "parallel-executor"
]

[workspace.package]
authors = ["Generative Labs"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
criterion = "0.3"
anyhow = "1.0.79"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }

# Substrate primitive dependencies
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

# # Substrate client dependencies
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
