[package]
name = "parallel-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
codec = { workspace = true }
derivative = { workspace = true }

sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true }
sp-externalities = { workspace = true }
sp-version = { workspace = true }

sc-client-api = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }

hash-db = { version = "0.16.0", default-features = false }
crossbeam = "0.8.3"
dashmap = "5.5.3"
claims = "0.7.1"
arc-swap = "1.6.0"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"]}
substrate-test-runtime-client = { workspace = true }
sp-keyring = { workspace = true }

[[bench]]
name = "extrinsics_codec"
harness = false
