[package]
name = "wp-block-builder"
version = "0.1.0"
edition = "2021"




[dependencies]
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" , default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" , default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" , default-features = false }

[features]
default = ["std"]
std = ["sp-api/std", "sp-inherents/std", "sp-runtime/std", "sp-std/std"]
